# pyprimemesh

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  README.rst  SECURITY.md  ignore_words.txt  index.html  new_plotter_example.py  pyproject.toml  requirements.txt  requirements_docs.txt  requirements_graphics.txt  requirements_style.txt  robots.txt  setup.py  sitemap.xml  tox.ini  versions.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md
.github/workflows/: add_to_kanban.yml  ci_cd.yml  dependabot_automerge.yml  label.yml  nightly_doc_build.yml
.reuse/templates/: license_header.jinja2
doc/: .vale.ini  CHANGELOG.md  Makefile  make.bat
doc/changelog.d/: 1000.miscellaneous.md  1004.miscellaneous.md  1006.dependencies.md  1009.documentation.md  1010.maintenance.md  1011.dependencies.md  1015.miscellaneous.md  1017.maintenance.md  1018.documentation.md  1019.maintenance.md  1020.maintenance.md  1021.dependencies.md  1022.dependencies.md  1025.documentation.md  1026.miscellaneous.md  1027.documentation.md  1028.documentation.md  1029.maintenance.md  1030.maintenance.md  1031.maintenance.md  1032.dependencies.md  1033.miscellaneous.md  1034.documentation.md  1035.documentation.md  1036.documentation.md  1037.documentation.md  1038.maintenance.md  1039.maintenance.md  1040.documentation.md  1040.miscellaneous.md  1041.maintenance.md  1042.documentation.md  1043.maintenance.md  1046.documentation.md  1047.documentation.md  1048.miscellaneous.md  1049.dependencies.md  1050.maintenance.md  1051.documentation.md  1052.fixed.md  (+342 more)
doc/galleryexamples/: lucid_mixing_elbow.py
doc/source/: class_documentation.rst  conf.py  index.rst  sg_execution_times.rst
docker/: README.md  build_docker_linux.py
docker/linux/: Dockerfile
docs/: TRANSLATION_MAPPING.md  USD_IMPLEMENTATION.md
examples/: README.txt  bracket_scaffold.py  example_template.py  import_mutiple_cad_files.py  lucid_mixing_elbow.py  lucid_toy_car.py  mixing_elbow.py  pipe_tee.py  pipe_tee.py_ignore  set_num_of_threads.py
examples/beta/: README.txt
examples/gallery/: 00_lucid_file_IO.py  01_bracket_scaffold.py  02_lucid_mixing_elbow.py  03_lucid_pipe_tee.py  04_lucid_toy_car.py  05_pcb_stacker.py  06_blade_morph.py  06_saddle_bracket.py  07_saddle_bracket.py  08_lucid_generic_f1_rear_wing.py  09_multi_layer_quad_mesh_pcb.py  10_wheel_ground_contact_patch.py  11_solder_ball.py  12_import_from_pygeometry.py  13_pyvista_graphics.py  14_openusd_export.py  README.txt  blade_morph.py  bracket_scaffold.py  lucid_mixing_elbow.py  lucid_pipe_tee.py  lucid_toy_car.py  pcb_hex.py  pcb_stacker.py  pipe_tee.py  saddle_bracket.py
examples/gallery_beta/: 11_solder_ball.py
examples/gallery_examples/: lucid_toy_car.py
examples/galleryexamples/: example_template.py  lucid_toy_car.py  mixing_elbow.cas  pipe_tee.py
examples/misc/: GALLERY_HEADER.txt  README.txt  elbow_trame.py  example_template.py  trial.py  trial_midside_nodes_projection.py
examples/misc_examples/: example_template.py
examples/multi_files/: Design2(10).stl  Design2(11).stl  Design2(12).stl  Design2(13).stl  Design2(14).stl  Design2(15).stl  Design2(16).stl  Design2(17).stl  Design2(18).stl  Design2(19).stl  Design2(2).stl  Design2(20).stl  Design2(3).stl  Design2(4).stl  Design2(5).stl  Design2(6).stl  Design2(7).stl  Design2(8).stl  Design2(9).stl  Design2.stl  import_muti_cad_files.py
examples/other/: elbow_trame.py  mixing_elbow.py  pipe_tee.py
pull/1039/: index.html  searchindex.js  sg_execution_times.html
pull/1040/: objects.inv  searchindex.js  sg_execution_times.html
pull/1041/: searchindex.js  sg_execution_times.html
pull/1045/: objects.inv  searchindex.js  sg_execution_times.html
pull/1047/: searchindex.js  sg_execution_times.html
pull/1049/: searchindex.js  sg_execution_times.html
pull/1052/: searchindex.js  sg_execution_times.html
pull/1059/: searchindex.js  sg_execution_times.html
pull/1060/: searchindex.js  sg_execution_times.html
pull/1061/: 404.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
pull/1072/: searchindex.js  sg_execution_times.html
pull/1076/: objects.inv  search.html  searchindex.js  sg_execution_times.html
pull/1077/: 404.html  genindex.html  search.html  searchindex.js  sg_execution_times.html
pull/1094/: genindex.html  objects.inv  searchindex.js  sg_execution_times.html
pull/1098/: genindex.html  objects.inv  searchindex.js  sg_execution_times.html
pull/1100/: searchindex.js  sg_execution_times.html
pull/1102/: searchindex.js  sg_execution_times.html
pull/1103/: genindex.html  objects.inv  searchindex.js  sg_execution_times.html
pull/1106/: objects.inv  searchindex.js  sg_execution_times.html
pull/1108/: genindex.html  index.html  searchindex.js  sg_execution_times.html
pull/1111/: search.html  searchindex.js  sg_execution_times.html
pull/1112/: 404.html  searchindex.js  sg_execution_times.html
pull/1114/: 404.html  index.html  searchindex.js  sg_execution_times.html
pull/1115/: 404.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
pull/1118/: 404.html  genindex.html  index.html  search.html  searchindex.js  sg_execution_times.html
pull/1124/: objects.inv  searchindex.js  sg_execution_times.html
pull/1131/: searchindex.js  sg_execution_times.html
pull/1133/: searchindex.js  sg_execution_times.html
pull/1134/: searchindex.js  sg_execution_times.html
requirements/: requirements_build.txt  requirements_docs.txt  requirements_style.txt
tests/: __init__.py  check_self_model.py  conftest.py  test_bracket_scaffold.py  test_case_0.py  test_elbow_lucid_regression.py  test_elbow_scdoc.py  test_gearbox_tutorial_regression.py  test_imports.py  test_library.py_old  test_lucid_toycar_wrapper_tutorial_regression.py  test_mesh_usd.py  test_model.py  test_pipe_tee_junction.py  test_wrapper_control.py  testtest.py
version/: index.html
(+84590 files in other folders)
