[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-meshing-prime"
version = "0.6.0.dev7"
description = "PyPrimeMesh is a Python client to Ansys Prime Server, which delivers core Ansys meshing technology."
readme = "README.md"
requires-python = ">=3.8,<4"
license = {file = "LICENSE"}
authors = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
maintainers =  [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
  "ansys-api-meshing-prime==0.1.2",
  "numpy>=1.14.0",
  "appdirs>=1.4.0",
  "importlib-metadata>=4.0,<5; python_version<='3.8'",
]

[project.optional-dependencies]
graphics = [
  "pyvista[jupyter]>=0.38.1",
]
tests = [
  "pytest==8.1.1",
  "pytest-cov==4.1.0",
  "pytest-pyvista==0.1.9",
  "pytest-xvfb==3.0.0",
  "pyvista[trame]==0.43.4"
]
doc = [
  "ansys-sphinx-theme==0.14.1",
  "jupyter-sphinx==0.5.3",
  "numpydoc==1.6.0",
  "Sphinx==7.2.6",
  "pyvista==0.43.4",
  "sphinx-autodoc-typehints==2.0.0",
  "sphinx-copybutton==0.5.2",
  "sphinx-gallery==0.15.0",
  "sphinx-notfound-page==1.0.0",
  "sphinxemoji==0.3.1",
]
all = [
  "pyvista[jupyter]>=0.38.1",
]

[project.urls]
Source = "https://github.com/ansys/pyprimemesh"
Documentation = "https://prime.docs.pyansys.com"


[tool.flit.module]
name = "ansys.meshing.prime"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
skip-string-normalization = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests
  | profiling
  | src/ansys/meshing/prime/autogen
  | .md
  | doc
)/
'''
[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=ansys.meshing.prime.core --cov=ansys.meshing.prime.internals --cov=ansys.meshing.prime.lucid --cov=ansys.meshing.prime.graphics --cov-report=term --cov-report=html:.cov/html --image_cache_dir tests/graphics/image_cache --add_missing_images"
testpaths = [
    "tests",
]

[tool.towncrier]
directory = "doc/changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "doc/changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/ansys/pyprimemesh/releases/tag/v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/ansys/pyprimemesh/pull/{issue})"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

