[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-meshing-prime"
version = "0.9.2.dev0"
description = "PyPrimeMesh is a Python client to Ansys Prime Server, which delivers core Ansys meshing technology."
readme = "README.md"
requires-python = ">=3.10,<4"
license = {file = "LICENSE"}
authors = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
maintainers =  [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
  "ansys-api-meshing-prime==0.1.4",
  "numpy>=1.14.0",
  "appdirs>=1.4.0",
  "importlib-metadata>=4.0,<5; python_version<='3.8'",
  "numpy<2.3", # temporary fix since breaks visualization
]

[project.optional-dependencies]
graphics = [
  "ansys-tools-visualization-interface>=0.4.7,<1",
]
tests = [
  "ansys-tools-visualization-interface==0.9.2",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "pytest-pyvista==0.1.9",
  "pytest-xvfb==3.1.1",
  "pyvista[trame]==0.45.2",
]
doc = [
  "ansys-sphinx-theme[autoapi]==1.5.2",
  "ansys-tools-visualization-interface==0.9.2",
  "jupyter-sphinx==0.5.3",
  "numpydoc==1.8.0",
  "sphinx==8.2.3",
  "sphinx_design==0.6.1",
  "pyvista==0.45.2",
  "sphinx-autodoc-typehints==3.1.0",
  "sphinx-copybutton==0.5.2",
  "sphinx-gallery==0.19.0",
  "sphinx-notfound-page==1.1.0",
  "sphinxemoji==0.3.1",
]
all = [
  "ansys-tools-visualization-interface>=0.2.6,<1",
]

[project.urls]
Source = "https://github.com/ansys/pyprimemesh"
Issues = "https://github.com/ansys/pyprimemesh/issues"
Discussions = "https://github.com/ansys/pyprimemesh/discussions"
Documentation = "https://prime.docs.pyansys.com"
Releases = "https://github.com/ansys/pyprimemesh/releases"

[tool.flit.module]
name = "ansys.meshing.prime"

[tool.black]
line-length = 100
skip-string-normalization = true
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests
  | profiling
  | src/ansys/meshing/prime/autogen
  | .md
  | doc
)/
'''
[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-ra --cov=ansys.meshing.prime.core --cov=ansys.meshing.prime.internals --cov=ansys.meshing.prime.lucid --cov=ansys.meshing.prime.graphics --cov-report=term --cov-report=html:.cov/html --image_cache_dir tests/graphics/image_cache --add_missing_images"
testpaths = [
    "tests",
]

[tool.towncrier]
directory = "doc/changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "doc/changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/ansys/pyprimemesh/releases/tag/v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/ansys/pyprimemesh/pull/{issue})"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true


[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
